fixing some issues
end the exposing of the database engine
adding a time function to calcualte the time of the pipeline

--- a/scripts/pipeline.ipynb
+++ b/scripts/pipeline.ipynb
@@ -121,16 +121,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fbeaf5a3-c405-4d03-b3bb-2a6eb409be01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time # to know how much time each batch has taken"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c7a529b2-70de-48fb-aced-586fd3c2d448",
    "metadata": {},
    "outputs": [],
    "source": [
     "chunck = 10000\n",
     "for i in range(0, len(df), chunck):\n",
+    "    start_time= time.time()\n",
     "    e = i + chunck\n",
     "    batch = df.iloc[i:e]\n",
-    "    batch.to_sql(name=\"nytaxi\", con=connection, if_exists=\"append\")"
+    "    batch.to_sql(name=\"nytaxi\", con=connection, if_exists=\"append\")\n",
+    "    end_time = time.time() - start_time\n",
+    "    print(end_time)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "147bb03b-3a33-4be7-beda-5c264955f00d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
